--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,31 @@
     <script src="js/angular-masonry-directive.js"></script>
     <script src="js/controllers.js"></script>
 
+    <style>
+        html, body {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+        video, img {
+            display: none;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        #overlay {
+            background-color: black;
+            display: none;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+
   </head>
     <body ng-controller="ProjectListCtrl">
         <div masonry='{ "transitionDuration" : "0.4s", "itemSelector" : ".tile"}'>
@@ -31,6 +56,11 @@
                 </div>
             </div>
         </div>
+
+        <div id="overlay"></div>
+        <video id="bombVideo" src="atom.webm"></video>
+        <img id="alertImage" src="WARNING.gif" />
+        <audio id="alertSound" src="radio-illuminati_nuclear-alarm-sound-effect.mp3"></audio>
 
         <script src="/socket.io/socket.io.js"></script>
     </body>
